hphp/hack/test/typecheck/T90599414.php
<?hh

<<__EntryPoint>>
function non_arraykey_index_access(): void {
  $m = Map {};
  $m[null];
}
